# doosan-robot2

./: README.md  ssdgfdsfdsfdv.txt  test.txt
.devcontainer/: devcontainer.json  post-command.sh
.github/workflows/: docker-image.yml  issue_bot.yml  sync-drfl-libraries-jazzy.yml  sync-to-upstream-jazzy.yml
dsr_bringup2/: setup.py
dsr_bringup2/dsr_bringup2/: connection.py  controller_config.py  gazebo_connection.py  git_info.py  set_config.py  utils.py
dsr_bringup2/launch/: dsr_bringup2_gazebo.launch.py  dsr_bringup2_moveit.launch.py  dsr_bringup2_mujoco.launch.py  dsr_bringup2_mujoco_gripper.launch.py  dsr_bringup2_rviz.launch.py  dsr_bringup2_spawn_on_gazebo.launch.py  dsr_mobile_manipulator_dual_rviz.launch.py  dsr_mobile_manipulator_rviz.launch.py
dsr_common2/: CMakeLists.txt
dsr_common2/imp/: DRFC.py  DR_common2.py  DSR_ROBOT2.py  test_movej.py  test_servoj.py  test_servoj_rt.py  test_servol.py
dsr_common2/include/: DRFC.h  DRFL.h  DRFLEx.h  DRFS.h
dsr_controller2/config/: dsr_controller2.yaml  dsr_controller2_p3020.yaml  gripper_controller.yaml
dsr_controller2/src/: dsr_controller2.cpp
dsr_description2/config/: macro.materials.xacro  macro.transmission.xacro
dsr_description2/gripper/: robotiq.ros2_control.xacro  robotiq.xacro
dsr_description2/ros2_control/: a0509.ros2_control.xacro  a0912.mj_ros2_control.xacro  a0912.ros2_control.xacro  e0509.mj_ros2_control.xacro  e0509.ros2_control.xacro  h2017.ros2_control.xacro  h2515.mj_ros2_control.xacro  h2515.ros2_control.xacro  m0609.mj_ros2_control.xacro  m0609.ros2_control.xacro  m0617.mj_ros2_control.xacro  m0617.ros2_control.xacro  m1013.mj_ros2_control.xacro  m1013.ros2_control.xacro  m1509.mj_ros2_control.xacro  m1509.ros2_control.xacro  p3020.gz_ros2_control.xacro  p3020.mj_ros2_control.xacro  p3020.ros2_control.xacro  robotiq.ros2_control.xacro
dsr_description2/urdf/: 2f_85.ros2_control.xacro  a0509.blue.urdf  a0509.urdf  a0509.white.urdf  a0912.blue.urdf  a0912.urdf  a0912.white.urdf  e0509.urdf  h2017.blue.urdf  h2017.white.urdf  h2515.blue.urdf  h2515.urdf  h2515.white.urdf  m0609.blue.urdf  m0609.urdf  m0609.white.urdf  m0617.blue.urdf  m0617.urdf  m0617.white.urdf  m1013.blue.urdf  m1013.urdf  m1013.white.urdf  m1509.blue.urdf  m1509.urdf  m1509.white.urdf  p3020.urdf  robotiq_2f_85_macro.urdf.xacro
dsr_description2/xacro/: a0509.urdf.xacro  a0912.urdf.xacro  e0509.urdf.xacro  h2017.urdf.xacro  h2515.urdf.xacro  m0609.urdf.xacro  m0617.urdf.xacro  m1013.urdf.xacro  m1509.urdf.xacro  macro.a0509.blue.xacro  macro.a0509.white.xacro  macro.a0912.blue.xacro  macro.a0912.white.xacro  macro.e0509.white.xacro  macro.h2017.blue.xacro  macro.h2515.blue.xacro  macro.h2515.white.xacro  macro.m0609.blue.xacro  macro.m0609.white.xacro  macro.m0617.blue.xacro  macro.m0617.white.xacro  macro.m1013.blue.xacro  macro.m1013.white.xacro  macro.m1509.blue.xacro  macro.m1509.white.xacro  macro.p3020.blue.xacro  macro.p3020.white.xacro  p3020.urdf.xacro  robotiq_85.xacro
dsr_example2/dsr_example/: setup.py
dsr_example2/dsr_realtime_control/: README.md
dsr_gazebo2/launch/: dsr_gazebo.launch.py  dsr_spawn_on_gazebo.launch.py
dsr_hardware2/src/: dsr_hw_interface2.cpp
dsr_launcher2/launch/: single_robot_gazebo.launch.py  single_robot_rviz_gazebo.launch.py
dsr_moveit2/dsr_moveit_config_m1013/: CMakeLists.txt  package.xml  plugin_description.xml
dsr_msgs2/: CMakeLists.txt
dsr_msgs2/msg/: ServojStream.msg
dsr_mujoco/: README.md  package.xml
dsr_mujoco/doc/: doc.md
dsr_tests/: package.xml
(+120 files in other folders)
